# SafeClause.ai

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  agent.py  app.py  extracted_output.txt  main.py  output.txt  pyproject.toml  requirements.txt
SafeClause/Chunks/: THE ARBITRATION AND CONCILIATION ACT, 1996_chunks_1.json  THE ARBITRATION AND CONCILIATION ACT, 1996_chunks_3.json  THE COMPANIES ACT, 2013_chunks_11.json  THE COMPANIES ACT, 2013_chunks_12.json  THE COMPANIES ACT, 2013_chunks_15.json  THE COMPANIES ACT, 2013_chunks_3.json  THE COMPANIES ACT, 2013_chunks_4.json  THE COMPANIES ACT, 2013_chunks_5.json  THE COMPANIES ACT, 2013_chunks_7.json  THE COMPANIES ACT, 2013_chunks_8.json  THE CONSTITUTION OF INDIA_chunks_1.json  THE CONSTITUTION OF INDIA_chunks_11.json  THE CONSTITUTION OF INDIA_chunks_2.json  THE CONSTITUTION OF INDIA_chunks_3.json  THE CONSTITUTION OF INDIA_chunks_4.json  THE CONSTITUTION OF INDIA_chunks_5.json  THE CONSUMER PROTECTION ACT, 2019_chunks_1.json  THE COPYRIGHT ACT, 1957_chunks_2.json  THE COPYRIGHT ACT, 1957_chunks_3.json  THE ENVIRONMENT (PROTECTION) ACT, 1986_chunks_1.json  THE INDIAN CONTRACT ACT, 1872_chunks_2.json  THE INDIAN CONTRACT ACT, 1872_chunks_3.json  THE INDIAN STAMP ACT, 1899_chunks_1.json  THE INDIAN STAMP ACT, 1899_chunks_2.json  THE INDIAN STAMP ACT, 1899_chunks_3.json  (+31 more)
SafeClause/testing/: legalAgent.py  (+4 more)
temp/: agentcode.py  mcp_rag.py  mcp_test.py  s3_test.py  textsplitter.py  upsertdata-dense.py  upsertdata-sparse.py
tools/: __init__.py  rag_tool.py
utils/: __init__.py  llamaparse.py  storage_service.py
(+52 files in other folders)
