[project]
name = "safeclause-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.52.0",
    "langchain>=1.1.0",
    "langchain-azure-ai>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-mcp-tools>=0.2.13",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "llama-cloud-services>=0.6.85",
    "pinecone>=7.3.0",
    "pypdf>=6.4.0",
    "requests>=2.32.5",
]
