[project]
name = "safeclause-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.4",
    "fastapi>=0.124.0",
    "google-genai>=1.52.0",
    "grandalf>=0.8",
    "langchain>=1.1.0",
    "langchain-azure-ai>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-mcp-tools>=0.2.13",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.4",
    "llama-cloud-services>=0.6.85",
    "pinecone>=7.3.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-aws4auth>=1.3.1",
    "uvicorn>=0.38.0",
]
